2010-12-17  John W. Eaton  <jwe@octave.org>

	* interpreter/plot.txi (Two-Dimensional Plots): Document comet3.

2010-12-17  John W. Eaton  <jwe@octave.org>

	* interpreter/plot.txi (Introduction to Graphics Structures):
	Dcoument isprop.

2010-12-17  Rik  <octave@nomad.inbox5.com>

	* interpreter/oop.txi: Redo table rendered incorrectly in Info
	environment.

2010-12-17  Rik  <octave@nomad.inbox5.com>

	* interpreter/numbers.txi: Remove obsolete documentation about 64-bit
	integer arithmetic.

2010-12-16  Rik  <octave@nomad.inbox5.com>

	* interpreter/doccheck/mk_undocumented_list: Update list of exception
	functions not requiring documentation.

2010-12-09  Doug Stewart <doug.dastew@gmail.com>

	* interpreter/plot.txi: changed origial to origin in Quiver section

2010-12-09  Kai Habel  <kai.habel@gmx.de>

	* interpreter/plot.txi: Add pie3 function.

2010-11-26  John W. Eaton  <jwe@octave.org>

	* interpreter/install.txi (Compiling Octave with 64-bit
	Indexing): New section.

2010-11-23  John W. Eaton  <jwe@octave.org>

	* interpreter/install.txi: Delete obsolete statement about
	needing a patch for makeinfo.

2010-11-18  John W. Eaton  <jwe@octave.org>

	* interpreter/contributors.in: Add Christos Dimitrakakis to the list.

2010-11-18  John W. Eaton  <jwe@octave.org>

	* interpreter/contributors.in: Add Daisuke Takago to the list.

2010-11-15  Rik  <octave@nomad.inbox5.com>

	* interpreter/bugs.txi, interpreter/emacs.txi, interpreter/func.txi,
	interpreter/geometry.txi, interpreter/linalg.txi,
	interpreter/octave.texi, interpreter/package.txi, interpreter/plot.txi,
	interpreter/stmt.txi, interpreter/strings.txi, interpreter/system.txi:
	Update info-based documentation menus to include new nodes.

2010-11-15  Rik  <octave@nomad.inbox5.com>

	* interpreter/octave.texi, interpreter/plot.txi: Rename subsection
	"Printing Plots" to "Printing and Saving Plots".  Add reference to
	new saveas function.

2010-11-10  John W. Eaton  <jwe@octave.org>
